Rework meme routes
